--- a/public/index.html
+++ b/public/index.html
@@ -66,8 +66,8 @@
 						<option value="题干">题干</option>
 						<option value="题干">题干</option>
 					</select>
-					<input type="text">
-					<label for="">查找</label>
+					<input type="text" id="findText">
+					<button id="find">查找</button>
 				</div>
 				<div>
 					<span>单个添加项目</span>
@@ -117,7 +117,7 @@
 					<button>本页全部试题加入试卷</button>
 				</div>
 				<div class="topic" id="topic">
-					<!-- div>
+				<!-- <div>
 						<div>
 							<span>题号:1</span>
 							<span>题型:单选题</span>
@@ -125,6 +125,10 @@
 							<span>知识点:HTML</span>
 						</div>
 						<div>11212</div>
+						<div>A</div>
+						<div>A</div>
+						<div>A</div>
+						<div>A</div>
 						<div>
 							<button>审核通过</button>
 							<button>审核不通过</button>
